fixed page jumping on category change

--- a/new/components/content/talks/talk-list/talk-list.css
+++ b/new/components/content/talks/talk-list/talk-list.css
@@ -1,3 +1,23 @@
 .talk-list {
   min-height: 100%;
+
+  & .spinner {
+    display: none;
+    position:absolute;
+  }
+
+  & .talks {
+    opacity: 1;
+    min-height: 100%;
+  }
+
+  & .loading {
+    & .spinner {
+      display: block;
+    }
+
+    & .talks {
+      opacity: 0;
+    }
+  }
 }
